<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="4dp"
    android:gravity="top"
    android:padding="@dimen/activity_horizontal_margin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Large"
                android:text="Pantalla principal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/help1" />
            <ImageView
                android:contentDescription="@string/lliure_vs_ocupada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lliure_vs_ocupada"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/help_add" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/help2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/help_retirar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/help3" />
            <ImageView
                android:contentDescription="@string/help_img_tiquet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tiquet"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/help4" />
            <ImageView
                android:contentDescription="@string/help_img_floatbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/floating_button"
                android:layout_gravity="center" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Large"
                android:text="@string/title_activity_ticket_list"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/TextAppearance.AppCompat"
                android:text="@string/help5" />
            <ImageView
                android:contentDescription="@string/help_img_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>